--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
     <script src="lib/angular-ui-router.js"></script>
     <!--App-->
     <script src="app/app.js"></script>
+    
+    <script src="app/controllers/ytSearchCtrl.js"></script>
+    
     <script src="app/controllers/ytAuthCtrl.js"></script>
     <script src="app/controllers/ytGraphCtrl.js"></script>
     <script src="app/services/ytDataService.js"></script>
